# Tax-Calculator-Austria

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
data/: run_smoke.py
rules/: asset_class_overrides.yaml  brokers.yaml  scalable_distribution_overrides.yaml  tax_2023.yaml  tax_2024.yaml  tax_2025.yaml  tax_2026.yaml
scripts/: smoke_e2e.py
src/tax_calc_at/: __init__.py  export.py  model.py  normalize.py  pool.py  service.py  store.py
src/tax_calc_at/engine/: __init__.py  e1kv.py  rules.py
src/tax_calc_at/fx/: __init__.py  convert.py  ecb.py
src/tax_calc_at/parsers/: __init__.py  base.py  ibkr_flex.py  scalable.py  trade_republic.py  trading212.py
src/tax_calc_at/ui/: __init__.py  app.py
tests/: conftest.py  test_engine_tax_behavior.py  test_export_worksheet.py  test_normalize.py  test_parsers_smoke.py  test_pool.py  test_store_and_engine.py
